refactor(loottable): 引入 generation 原子发布与 CatalogQueryIndex
原先 catalog / rawCatalog / tableHashes / catalogStructure 各自独立清空与填充，
读取方可能看到半新半旧状态，旧 worker 结果也可能写进新目录。改为整代静态部分
（快照 / 引用图 / 编译产物 / 静态投影 / 每表哈希 / 分类结构）在局部对象构建完成
后经单个 volatile 引用原子发布；模拟结果作为该代 overlay 渐进增长，提交时校验
generation 并丢弃旧代结果。构建失败进入明确的空状态而非半成品。

子树物品聚合收敛到 CatalogQueryIndex（模拟态优先、缺失处回退静态投影），替换
散落的 collectSubtreeItems 调用点。成就判定与命令改以解析态表集合为准，不再因
"还没轮到这张表模拟"而整张跳过、漏发奖励。

投影层同步对齐目录口径：未被编译的表返回空结果，子表入口据此过滤掉。